--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Arneson drive.loader.js";
+      var loaderUrl = buildUrl + "/Arneson_Drive.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Arneson drive.data",
-        frameworkUrl: buildUrl + "/Arneson drive.framework.js",
-        codeUrl: buildUrl + "/Arneson drive.wasm",
+        dataUrl: buildUrl + "/Arneson_Drive.data",
+        frameworkUrl: buildUrl + "/Arneson_Drive.framework.js",
+        codeUrl: buildUrl + "/Arneson_Drive.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (1)",
